--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,8 +11,16 @@ body {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  padding: 20px;
   gap: 5px;
 }
+.textarea {
+  border: solid #888888 2px;
+  border-radius: 5px;
+  box-shadow: 0px 20px 20px rgb(0 0 0 / 30%);
+  margin-bottom: 20px;
+}
+
 .row {
   display: flex;
   gap: 5px;
@@ -33,18 +41,28 @@ body {
   border-bottom: 1px solid #b5b5b5;
   border-radius: 5px;
   box-shadow: 0 0 3px -1px rgb(0 0 0 / 30%);
+  transition: all 0.3s;
   cursor: pointer;
 }
+.button:hover {
+  box-shadow: 1px 2px 3px 1px rgb(0 0 0 / 30%);
+  transition: all 0.3s;
+}
+
 .backspace-button,
 .enter-button,
 .shift-button,
 .capsLock-button {
   flex-grow: 3;
 }
+
 .tab-button,
 .delete-button {
   flex-grow: 2;
 }
+
 .button:active {
   background-color: #eeeeee;
+  transform: translateY(2px);
+  transition: all 0.3s;
 }
