--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,14 @@
 
 body {
   background-color: #ececec;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
 }
 
 .app {
-  width: 730px;
+  width: 1030px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -14,11 +18,15 @@ body {
   padding: 20px;
   gap: 5px;
 }
+
 .textarea {
   border: solid #888888 2px;
   border-radius: 5px;
   box-shadow: 0px 20px 20px rgb(0 0 0 / 30%);
   margin-bottom: 20px;
+  padding: 5px;
+  outline: none;
+  caret-color: rgb(200, 200, 200);
 }
 
 .row {
@@ -43,6 +51,7 @@ body {
   box-shadow: 0 0 3px -1px rgb(0 0 0 / 30%);
   transition: all 0.3s;
   cursor: pointer;
+  outline: none;
 }
 .button:hover {
   box-shadow: 1px 2px 3px 1px rgb(0 0 0 / 30%);
@@ -62,6 +71,11 @@ body {
 }
 
 .button:active {
+  background-color: #eeeeee;
+  transform: translateY(2px);
+  transition: all 0.3s;
+}
+.button-active {
   background-color: #eeeeee;
   transform: translateY(2px);
   transition: all 0.3s;
