--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 100vh;
 }
 
 .app {
@@ -66,8 +66,16 @@ body {
 }
 
 .tab-button,
-.delete-button {
+.delete-button,
+.ctrl-button,
+.alt-button {
   flex-grow: 2;
+}
+.langButton-button {
+  flex-grow: 1.3;
+}
+.space-button {
+  flex-grow: 8;
 }
 
 .button:active {
@@ -79,4 +87,8 @@ body {
   background-color: #eeeeee;
   transform: translateY(2px);
   transition: all 0.3s;
+}
+
+.description {
+  text-align: center;
 }
