--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,7 +54,7 @@ body {
   align-items: center;
   flex-grow: 1;
   font-size: 15px;
-  background: #fff;
+  background-color: #fff;
   border: none;
   border-bottom: 1px solid #b5b5b5;
   border-radius: 5px;
@@ -62,6 +62,12 @@ body {
   transition: all 0.3s;
   cursor: pointer;
   outline: none;
+
+  &.black {
+    background-color: #333333;
+    border-bottom: 1px solid #4a4a4a;
+    color: #ffffff;
+  }
 
   &:hover {
     box-shadow: 1px 2px 3px 1px rgb(0 0 0 / 30%);
@@ -73,12 +79,12 @@ body {
 
   &:active {
     box-shadow: 1px 2px 3px 1px rgb(0 0 0 / 30%);
-    background-color: #111111;
+    background-color: #eeeeee;
     transform: translateY(2px);
     transition: all 0.3s;
     &.black {
       box-shadow: 1px 2px 3px 1px rgb(255 255 255 / 30%);
-      background-color: #111111;
+      background-color: #222222;
     }
   }
 
@@ -89,14 +95,8 @@ body {
     transition: all 0.3s;
     &.black {
       box-shadow: 1px 2px 3px 1px rgb(255 255 255 / 30%);
-      background-color: #111111;
+      background-color: #222222;
     }
-  }
-
-  &.black {
-    background: #333333;
-    border-bottom: 1px solid #4a4a4a;
-    color: #ffffff;
   }
 }
 
